--- a/styles/_modules.scss
+++ b/styles/_modules.scss
@@ -45,3 +45,14 @@ $navbar-height: 50px;
     background-color: darken($brand-color, 10%);
     cursor: pointer;
 }
+
+.filter {
+    margin: 20px 5% 0 5%;
+    padding: 10px;
+    width: 90%;
+
+    background-color: $gray-light;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
