--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,3 +1,9 @@
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 html {
     color: $font-color;
     font-family: 'Open Sans', sans-serif;
